parser.output
Terminales no usados en la gramática

   tk_not
   aumento
   decremento


Estado 11 conflictos: 1 desplazamiento/reducción
Estado 13 conflictos: 1 desplazamiento/reducción
Estado 17 conflictos: 5 desplazamiento/reducción


Gramática

    0 $accept: INICIO $end

    1 INICIO: LISTA_CUERPO

    2 LISTA_CUERPO: LISTA_CUERPO CUERPO
    3             | CUERPO

    4 CUERPO: LISTA_DECLARACION
    5       | LISTA_ASIGNACION
    6       | LISTA_IMPRIMIR

    7 LISTA_IMPRIMIR: LISTA_IMPRIMIR IMPRIMIR
    8               | IMPRIMIR

    9 IMPRIMIR: tk_imprimir pari CONT_VALOR pard puntocoma

   10 LISTA_ASIGNACION: LISTA_ASIGNACION ASIGNACION
   11                 | ASIGNACION

   12 ASIGNACION: LISTA_VAR tk_igual CONT_VALOR puntocoma

   13 LISTA_VAR: LISTA_VAR tk_igual VAR
   14          | VAR

   15 VAR: identificador
   16    | identificador LISTA_DIMENSION

   17 LISTA_DECLARACION: LISTA_DECLARACION DECLARACION
   18                  | DECLARACION

   19 DECLARACION: TIPO_DATO LISTA_ID tk_igual CONT_VALOR puntocoma
   20            | TIPO_DATO LISTA_ID
   21            | TIPO_DATO tk_arreglo LISTA_ID LISTA_DIMENSION puntocoma
   22            | TIPO_DATO tk_arreglo LISTA_ID LISTA_DIMENSION tk_igual llavei ARRAY llaved puntocoma

   23 ARRAY: ARRAY coma llavei LISTA_FILA llaved
   24      | llavei LISTA_FILA llaved

   25 LISTA_FILA: LISTA_FILA coma CONT_VALOR
   26           | CONT_VALOR

   27 LISTA_DIMENSION: LISTA_DIMENSION cori CONT_VALOR cord
   28                | cori CONT_VALOR cord

   29 TIPO_DATO: tk_string
   30          | tk_bool
   31          | tk_int
   32          | tk_double
   33          | tk_char

   34 LISTA_ID: LISTA_ID coma identificador
   35         | identificador

   36 CONT_VALOR: CONT_VALOR tk_and CONT_VALOR
   37           | CONT_VALOR tk_or CONT_VALOR
   38           | CONT_VALOR tk_mayorque CONT_VALOR
   39           | CONT_VALOR tk_menorque CONT_VALOR
   40           | CONT_VALOR tk_mayorigual CONT_VALOR
   41           | CONT_VALOR tk_menorigual CONT_VALOR
   42           | CONT_VALOR tk_igualacion CONT_VALOR
   43           | CONT_VALOR tk_diferenciacion CONT_VALOR
   44           | CONT_VALOR suma CONT_VALOR
   45           | CONT_VALOR menos CONT_VALOR
   46           | CONT_VALOR multi CONT_VALOR
   47           | CONT_VALOR division CONT_VALOR
   48           | CONT_VALOR potencia CONT_VALOR
   49           | menos CONT_VALOR
   50           | pari CONT_VALOR pard
   51           | VALOR

   52 VALOR: identificador
   53      | cadena
   54      | entero
   55      | decimal
   56      | booleano
   57      | caracter
   58      | identificador LISTA_DIMENSION


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
tk_int (258) 31
tk_double (259) 32
tk_bool (260) 30
tk_char (261) 33
tk_string (262) 29
tk_not (263)
tk_igual (264) 12 13 19 22
tk_menorque (265) 39
tk_mayorque (266) 38
tk_or (267) 37
tk_and (268) 36
tk_igualacion (269) 42
tk_diferenciacion (270) 43
tk_menorigual (271) 41
tk_mayorigual (272) 40
aumento (273)
decremento (274)
cori (275) 27 28
cord (276) 27 28
coma (277) 23 25 34
identificador (278) 15 16 34 35 52 58
entero (279) 54
decimal (280) 55
caracter (281) 57
booleano (282) 56
cadena (283) 53
pari (284) 9 50
pard (285) 9 50
suma (286) 44
menos (287) 45 49
multi (288) 46
division (289) 47
potencia (290) 48
puntocoma (291) 9 12 19 21 22
llavei (292) 22 23 24
llaved (293) 22 23 24
tk_arreglo (294) 21 22
tk_imprimir (295) 9
UMINUS (296)


No terminales con las reglas donde aparecen

$accept (42)
    en la izquierda: 0
INICIO (43)
    en la izquierda: 1, en la derecha: 0
LISTA_CUERPO (44)
    en la izquierda: 2 3, en la derecha: 1 2
CUERPO (45)
    en la izquierda: 4 5 6, en la derecha: 2 3
LISTA_IMPRIMIR (46)
    en la izquierda: 7 8, en la derecha: 6 7
IMPRIMIR (47)
    en la izquierda: 9, en la derecha: 7 8
LISTA_ASIGNACION (48)
    en la izquierda: 10 11, en la derecha: 5 10
ASIGNACION (49)
    en la izquierda: 12, en la derecha: 10 11
LISTA_VAR (50)
    en la izquierda: 13 14, en la derecha: 12 13
VAR (51)
    en la izquierda: 15 16, en la derecha: 13 14
LISTA_DECLARACION (52)
    en la izquierda: 17 18, en la derecha: 4 17
DECLARACION (53)
    en la izquierda: 19 20 21 22, en la derecha: 17 18
ARRAY (54)
    en la izquierda: 23 24, en la derecha: 22 23
LISTA_FILA (55)
    en la izquierda: 25 26, en la derecha: 23 24 25
LISTA_DIMENSION (56)
    en la izquierda: 27 28, en la derecha: 16 21 22 27 58
TIPO_DATO (57)
    en la izquierda: 29 30 31 32 33, en la derecha: 19 20 21 22
LISTA_ID (58)
    en la izquierda: 34 35, en la derecha: 19 20 21 22 34
CONT_VALOR (59)
    en la izquierda: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51,
    en la derecha: 9 12 19 25 26 27 28 36 37 38 39 40 41 42 43 44 45
    46 47 48 49 50
VALOR (60)
    en la izquierda: 52 53 54 55 56 57 58, en la derecha: 51


Estado 0

    0 $accept: . INICIO $end

    tk_int         desplazar e ir al estado 1
    tk_double      desplazar e ir al estado 2
    tk_bool        desplazar e ir al estado 3
    tk_char        desplazar e ir al estado 4
    tk_string      desplazar e ir al estado 5
    identificador  desplazar e ir al estado 6
    tk_imprimir    desplazar e ir al estado 7

    INICIO             ir al estado 8
    LISTA_CUERPO       ir al estado 9
    CUERPO             ir al estado 10
    LISTA_IMPRIMIR     ir al estado 11
    IMPRIMIR           ir al estado 12
    LISTA_ASIGNACION   ir al estado 13
    ASIGNACION         ir al estado 14
    LISTA_VAR          ir al estado 15
    VAR                ir al estado 16
    LISTA_DECLARACION  ir al estado 17
    DECLARACION        ir al estado 18
    TIPO_DATO          ir al estado 19


Estado 1

   31 TIPO_DATO: tk_int .

    $default  reduce usando la regla 31 (TIPO_DATO)


Estado 2

   32 TIPO_DATO: tk_double .

    $default  reduce usando la regla 32 (TIPO_DATO)


Estado 3

   30 TIPO_DATO: tk_bool .

    $default  reduce usando la regla 30 (TIPO_DATO)


Estado 4

   33 TIPO_DATO: tk_char .

    $default  reduce usando la regla 33 (TIPO_DATO)


Estado 5

   29 TIPO_DATO: tk_string .

    $default  reduce usando la regla 29 (TIPO_DATO)


Estado 6

   15 VAR: identificador .
   16    | identificador . LISTA_DIMENSION

    cori  desplazar e ir al estado 20

    $default  reduce usando la regla 15 (VAR)

    LISTA_DIMENSION  ir al estado 21


Estado 7

    9 IMPRIMIR: tk_imprimir . pari CONT_VALOR pard puntocoma

    pari  desplazar e ir al estado 22


Estado 8

    0 $accept: INICIO . $end

    $end  desplazar e ir al estado 23


Estado 9

    1 INICIO: LISTA_CUERPO .
    2 LISTA_CUERPO: LISTA_CUERPO . CUERPO

    tk_int         desplazar e ir al estado 1
    tk_double      desplazar e ir al estado 2
    tk_bool        desplazar e ir al estado 3
    tk_char        desplazar e ir al estado 4
    tk_string      desplazar e ir al estado 5
    identificador  desplazar e ir al estado 6
    tk_imprimir    desplazar e ir al estado 7

    $default  reduce usando la regla 1 (INICIO)

    CUERPO             ir al estado 24
    LISTA_IMPRIMIR     ir al estado 11
    IMPRIMIR           ir al estado 12
    LISTA_ASIGNACION   ir al estado 13
    ASIGNACION         ir al estado 14
    LISTA_VAR          ir al estado 15
    VAR                ir al estado 16
    LISTA_DECLARACION  ir al estado 17
    DECLARACION        ir al estado 18
    TIPO_DATO          ir al estado 19


Estado 10

    3 LISTA_CUERPO: CUERPO .

    $default  reduce usando la regla 3 (LISTA_CUERPO)


Estado 11

    6 CUERPO: LISTA_IMPRIMIR .
    7 LISTA_IMPRIMIR: LISTA_IMPRIMIR . IMPRIMIR

    tk_imprimir  desplazar e ir al estado 7

    tk_imprimir  [reduce usando la regla 6 (CUERPO)]
    $default     reduce usando la regla 6 (CUERPO)

    IMPRIMIR  ir al estado 25


Estado 12

    8 LISTA_IMPRIMIR: IMPRIMIR .

    $default  reduce usando la regla 8 (LISTA_IMPRIMIR)


Estado 13

    5 CUERPO: LISTA_ASIGNACION .
   10 LISTA_ASIGNACION: LISTA_ASIGNACION . ASIGNACION

    identificador  desplazar e ir al estado 6

    identificador  [reduce usando la regla 5 (CUERPO)]
    $default       reduce usando la regla 5 (CUERPO)

    ASIGNACION  ir al estado 26
    LISTA_VAR   ir al estado 15
    VAR         ir al estado 16


Estado 14

   11 LISTA_ASIGNACION: ASIGNACION .

    $default  reduce usando la regla 11 (LISTA_ASIGNACION)


Estado 15

   12 ASIGNACION: LISTA_VAR . tk_igual CONT_VALOR puntocoma
   13 LISTA_VAR: LISTA_VAR . tk_igual VAR

    tk_igual  desplazar e ir al estado 27


Estado 16

   14 LISTA_VAR: VAR .

    $default  reduce usando la regla 14 (LISTA_VAR)


Estado 17

    4 CUERPO: LISTA_DECLARACION .
   17 LISTA_DECLARACION: LISTA_DECLARACION . DECLARACION

    tk_int     desplazar e ir al estado 1
    tk_double  desplazar e ir al estado 2
    tk_bool    desplazar e ir al estado 3
    tk_char    desplazar e ir al estado 4
    tk_string  desplazar e ir al estado 5

    tk_int     [reduce usando la regla 4 (CUERPO)]
    tk_double  [reduce usando la regla 4 (CUERPO)]
    tk_bool    [reduce usando la regla 4 (CUERPO)]
    tk_char    [reduce usando la regla 4 (CUERPO)]
    tk_string  [reduce usando la regla 4 (CUERPO)]
    $default   reduce usando la regla 4 (CUERPO)

    DECLARACION  ir al estado 28
    TIPO_DATO    ir al estado 19


Estado 18

   18 LISTA_DECLARACION: DECLARACION .

    $default  reduce usando la regla 18 (LISTA_DECLARACION)


Estado 19

   19 DECLARACION: TIPO_DATO . LISTA_ID tk_igual CONT_VALOR puntocoma
   20            | TIPO_DATO . LISTA_ID
   21            | TIPO_DATO . tk_arreglo LISTA_ID LISTA_DIMENSION puntocoma
   22            | TIPO_DATO . tk_arreglo LISTA_ID LISTA_DIMENSION tk_igual llavei ARRAY llaved puntocoma

    identificador  desplazar e ir al estado 29
    tk_arreglo     desplazar e ir al estado 30

    LISTA_ID  ir al estado 31


Estado 20

   28 LISTA_DIMENSION: cori . CONT_VALOR cord

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 40
    VALOR       ir al estado 41


Estado 21

   16 VAR: identificador LISTA_DIMENSION .
   27 LISTA_DIMENSION: LISTA_DIMENSION . cori CONT_VALOR cord

    cori  desplazar e ir al estado 42

    $default  reduce usando la regla 16 (VAR)


Estado 22

    9 IMPRIMIR: tk_imprimir pari . CONT_VALOR pard puntocoma

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 43
    VALOR       ir al estado 41


Estado 23

    0 $accept: INICIO $end .

    $default  aceptar


Estado 24

    2 LISTA_CUERPO: LISTA_CUERPO CUERPO .

    $default  reduce usando la regla 2 (LISTA_CUERPO)


Estado 25

    7 LISTA_IMPRIMIR: LISTA_IMPRIMIR IMPRIMIR .

    $default  reduce usando la regla 7 (LISTA_IMPRIMIR)


Estado 26

   10 LISTA_ASIGNACION: LISTA_ASIGNACION ASIGNACION .

    $default  reduce usando la regla 10 (LISTA_ASIGNACION)


Estado 27

   12 ASIGNACION: LISTA_VAR tk_igual . CONT_VALOR puntocoma
   13 LISTA_VAR: LISTA_VAR tk_igual . VAR

    identificador  desplazar e ir al estado 44
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    VAR         ir al estado 45
    CONT_VALOR  ir al estado 46
    VALOR       ir al estado 41


Estado 28

   17 LISTA_DECLARACION: LISTA_DECLARACION DECLARACION .

    $default  reduce usando la regla 17 (LISTA_DECLARACION)


Estado 29

   35 LISTA_ID: identificador .

    $default  reduce usando la regla 35 (LISTA_ID)


Estado 30

   21 DECLARACION: TIPO_DATO tk_arreglo . LISTA_ID LISTA_DIMENSION puntocoma
   22            | TIPO_DATO tk_arreglo . LISTA_ID LISTA_DIMENSION tk_igual llavei ARRAY llaved puntocoma

    identificador  desplazar e ir al estado 29

    LISTA_ID  ir al estado 47


Estado 31

   19 DECLARACION: TIPO_DATO LISTA_ID . tk_igual CONT_VALOR puntocoma
   20            | TIPO_DATO LISTA_ID .
   34 LISTA_ID: LISTA_ID . coma identificador

    tk_igual  desplazar e ir al estado 48
    coma      desplazar e ir al estado 49

    $default  reduce usando la regla 20 (DECLARACION)


Estado 32

   52 VALOR: identificador .
   58      | identificador . LISTA_DIMENSION

    cori  desplazar e ir al estado 20

    $default  reduce usando la regla 52 (VALOR)

    LISTA_DIMENSION  ir al estado 50


Estado 33

   54 VALOR: entero .

    $default  reduce usando la regla 54 (VALOR)


Estado 34

   55 VALOR: decimal .

    $default  reduce usando la regla 55 (VALOR)


Estado 35

   57 VALOR: caracter .

    $default  reduce usando la regla 57 (VALOR)


Estado 36

   56 VALOR: booleano .

    $default  reduce usando la regla 56 (VALOR)


Estado 37

   53 VALOR: cadena .

    $default  reduce usando la regla 53 (VALOR)


Estado 38

   50 CONT_VALOR: pari . CONT_VALOR pard

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 51
    VALOR       ir al estado 41


Estado 39

   49 CONT_VALOR: menos . CONT_VALOR

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 52
    VALOR       ir al estado 41


Estado 40

   28 LISTA_DIMENSION: cori CONT_VALOR . cord
   36 CONT_VALOR: CONT_VALOR . tk_and CONT_VALOR
   37           | CONT_VALOR . tk_or CONT_VALOR
   38           | CONT_VALOR . tk_mayorque CONT_VALOR
   39           | CONT_VALOR . tk_menorque CONT_VALOR
   40           | CONT_VALOR . tk_mayorigual CONT_VALOR
   41           | CONT_VALOR . tk_menorigual CONT_VALOR
   42           | CONT_VALOR . tk_igualacion CONT_VALOR
   43           | CONT_VALOR . tk_diferenciacion CONT_VALOR
   44           | CONT_VALOR . suma CONT_VALOR
   45           | CONT_VALOR . menos CONT_VALOR
   46           | CONT_VALOR . multi CONT_VALOR
   47           | CONT_VALOR . division CONT_VALOR
   48           | CONT_VALOR . potencia CONT_VALOR

    tk_menorque        desplazar e ir al estado 53
    tk_mayorque        desplazar e ir al estado 54
    tk_or              desplazar e ir al estado 55
    tk_and             desplazar e ir al estado 56
    tk_igualacion      desplazar e ir al estado 57
    tk_diferenciacion  desplazar e ir al estado 58
    tk_menorigual      desplazar e ir al estado 59
    tk_mayorigual      desplazar e ir al estado 60
    cord               desplazar e ir al estado 61
    suma               desplazar e ir al estado 62
    menos              desplazar e ir al estado 63
    multi              desplazar e ir al estado 64
    division           desplazar e ir al estado 65
    potencia           desplazar e ir al estado 66


Estado 41

   51 CONT_VALOR: VALOR .

    $default  reduce usando la regla 51 (CONT_VALOR)


Estado 42

   27 LISTA_DIMENSION: LISTA_DIMENSION cori . CONT_VALOR cord

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 67
    VALOR       ir al estado 41


Estado 43

    9 IMPRIMIR: tk_imprimir pari CONT_VALOR . pard puntocoma
   36 CONT_VALOR: CONT_VALOR . tk_and CONT_VALOR
   37           | CONT_VALOR . tk_or CONT_VALOR
   38           | CONT_VALOR . tk_mayorque CONT_VALOR
   39           | CONT_VALOR . tk_menorque CONT_VALOR
   40           | CONT_VALOR . tk_mayorigual CONT_VALOR
   41           | CONT_VALOR . tk_menorigual CONT_VALOR
   42           | CONT_VALOR . tk_igualacion CONT_VALOR
   43           | CONT_VALOR . tk_diferenciacion CONT_VALOR
   44           | CONT_VALOR . suma CONT_VALOR
   45           | CONT_VALOR . menos CONT_VALOR
   46           | CONT_VALOR . multi CONT_VALOR
   47           | CONT_VALOR . division CONT_VALOR
   48           | CONT_VALOR . potencia CONT_VALOR

    tk_menorque        desplazar e ir al estado 53
    tk_mayorque        desplazar e ir al estado 54
    tk_or              desplazar e ir al estado 55
    tk_and             desplazar e ir al estado 56
    tk_igualacion      desplazar e ir al estado 57
    tk_diferenciacion  desplazar e ir al estado 58
    tk_menorigual      desplazar e ir al estado 59
    tk_mayorigual      desplazar e ir al estado 60
    pard               desplazar e ir al estado 68
    suma               desplazar e ir al estado 62
    menos              desplazar e ir al estado 63
    multi              desplazar e ir al estado 64
    division           desplazar e ir al estado 65
    potencia           desplazar e ir al estado 66


Estado 44

   15 VAR: identificador .
   16    | identificador . LISTA_DIMENSION
   52 VALOR: identificador .
   58      | identificador . LISTA_DIMENSION

    cori  desplazar e ir al estado 20

    tk_igual  reduce usando la regla 15 (VAR)
    $default  reduce usando la regla 52 (VALOR)

    LISTA_DIMENSION  ir al estado 69


Estado 45

   13 LISTA_VAR: LISTA_VAR tk_igual VAR .

    $default  reduce usando la regla 13 (LISTA_VAR)


Estado 46

   12 ASIGNACION: LISTA_VAR tk_igual CONT_VALOR . puntocoma
   36 CONT_VALOR: CONT_VALOR . tk_and CONT_VALOR
   37           | CONT_VALOR . tk_or CONT_VALOR
   38           | CONT_VALOR . tk_mayorque CONT_VALOR
   39           | CONT_VALOR . tk_menorque CONT_VALOR
   40           | CONT_VALOR . tk_mayorigual CONT_VALOR
   41           | CONT_VALOR . tk_menorigual CONT_VALOR
   42           | CONT_VALOR . tk_igualacion CONT_VALOR
   43           | CONT_VALOR . tk_diferenciacion CONT_VALOR
   44           | CONT_VALOR . suma CONT_VALOR
   45           | CONT_VALOR . menos CONT_VALOR
   46           | CONT_VALOR . multi CONT_VALOR
   47           | CONT_VALOR . division CONT_VALOR
   48           | CONT_VALOR . potencia CONT_VALOR

    tk_menorque        desplazar e ir al estado 53
    tk_mayorque        desplazar e ir al estado 54
    tk_or              desplazar e ir al estado 55
    tk_and             desplazar e ir al estado 56
    tk_igualacion      desplazar e ir al estado 57
    tk_diferenciacion  desplazar e ir al estado 58
    tk_menorigual      desplazar e ir al estado 59
    tk_mayorigual      desplazar e ir al estado 60
    suma               desplazar e ir al estado 62
    menos              desplazar e ir al estado 63
    multi              desplazar e ir al estado 64
    division           desplazar e ir al estado 65
    potencia           desplazar e ir al estado 66
    puntocoma          desplazar e ir al estado 70


Estado 47

   21 DECLARACION: TIPO_DATO tk_arreglo LISTA_ID . LISTA_DIMENSION puntocoma
   22            | TIPO_DATO tk_arreglo LISTA_ID . LISTA_DIMENSION tk_igual llavei ARRAY llaved puntocoma
   34 LISTA_ID: LISTA_ID . coma identificador

    cori  desplazar e ir al estado 20
    coma  desplazar e ir al estado 49

    LISTA_DIMENSION  ir al estado 71


Estado 48

   19 DECLARACION: TIPO_DATO LISTA_ID tk_igual . CONT_VALOR puntocoma

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 72
    VALOR       ir al estado 41


Estado 49

   34 LISTA_ID: LISTA_ID coma . identificador

    identificador  desplazar e ir al estado 73


Estado 50

   27 LISTA_DIMENSION: LISTA_DIMENSION . cori CONT_VALOR cord
   58 VALOR: identificador LISTA_DIMENSION .

    cori  desplazar e ir al estado 42

    $default  reduce usando la regla 58 (VALOR)


Estado 51

   36 CONT_VALOR: CONT_VALOR . tk_and CONT_VALOR
   37           | CONT_VALOR . tk_or CONT_VALOR
   38           | CONT_VALOR . tk_mayorque CONT_VALOR
   39           | CONT_VALOR . tk_menorque CONT_VALOR
   40           | CONT_VALOR . tk_mayorigual CONT_VALOR
   41           | CONT_VALOR . tk_menorigual CONT_VALOR
   42           | CONT_VALOR . tk_igualacion CONT_VALOR
   43           | CONT_VALOR . tk_diferenciacion CONT_VALOR
   44           | CONT_VALOR . suma CONT_VALOR
   45           | CONT_VALOR . menos CONT_VALOR
   46           | CONT_VALOR . multi CONT_VALOR
   47           | CONT_VALOR . division CONT_VALOR
   48           | CONT_VALOR . potencia CONT_VALOR
   50           | pari CONT_VALOR . pard

    tk_menorque        desplazar e ir al estado 53
    tk_mayorque        desplazar e ir al estado 54
    tk_or              desplazar e ir al estado 55
    tk_and             desplazar e ir al estado 56
    tk_igualacion      desplazar e ir al estado 57
    tk_diferenciacion  desplazar e ir al estado 58
    tk_menorigual      desplazar e ir al estado 59
    tk_mayorigual      desplazar e ir al estado 60
    pard               desplazar e ir al estado 74
    suma               desplazar e ir al estado 62
    menos              desplazar e ir al estado 63
    multi              desplazar e ir al estado 64
    division           desplazar e ir al estado 65
    potencia           desplazar e ir al estado 66


Estado 52

   36 CONT_VALOR: CONT_VALOR . tk_and CONT_VALOR
   37           | CONT_VALOR . tk_or CONT_VALOR
   38           | CONT_VALOR . tk_mayorque CONT_VALOR
   39           | CONT_VALOR . tk_menorque CONT_VALOR
   40           | CONT_VALOR . tk_mayorigual CONT_VALOR
   41           | CONT_VALOR . tk_menorigual CONT_VALOR
   42           | CONT_VALOR . tk_igualacion CONT_VALOR
   43           | CONT_VALOR . tk_diferenciacion CONT_VALOR
   44           | CONT_VALOR . suma CONT_VALOR
   45           | CONT_VALOR . menos CONT_VALOR
   46           | CONT_VALOR . multi CONT_VALOR
   47           | CONT_VALOR . division CONT_VALOR
   48           | CONT_VALOR . potencia CONT_VALOR
   49           | menos CONT_VALOR .

    $default  reduce usando la regla 49 (CONT_VALOR)


Estado 53

   39 CONT_VALOR: CONT_VALOR tk_menorque . CONT_VALOR

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 75
    VALOR       ir al estado 41


Estado 54

   38 CONT_VALOR: CONT_VALOR tk_mayorque . CONT_VALOR

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 76
    VALOR       ir al estado 41


Estado 55

   37 CONT_VALOR: CONT_VALOR tk_or . CONT_VALOR

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 77
    VALOR       ir al estado 41


Estado 56

   36 CONT_VALOR: CONT_VALOR tk_and . CONT_VALOR

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 78
    VALOR       ir al estado 41


Estado 57

   42 CONT_VALOR: CONT_VALOR tk_igualacion . CONT_VALOR

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 79
    VALOR       ir al estado 41


Estado 58

   43 CONT_VALOR: CONT_VALOR tk_diferenciacion . CONT_VALOR

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 80
    VALOR       ir al estado 41


Estado 59

   41 CONT_VALOR: CONT_VALOR tk_menorigual . CONT_VALOR

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 81
    VALOR       ir al estado 41


Estado 60

   40 CONT_VALOR: CONT_VALOR tk_mayorigual . CONT_VALOR

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 82
    VALOR       ir al estado 41


Estado 61

   28 LISTA_DIMENSION: cori CONT_VALOR cord .

    $default  reduce usando la regla 28 (LISTA_DIMENSION)


Estado 62

   44 CONT_VALOR: CONT_VALOR suma . CONT_VALOR

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 83
    VALOR       ir al estado 41


Estado 63

   45 CONT_VALOR: CONT_VALOR menos . CONT_VALOR

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 84
    VALOR       ir al estado 41


Estado 64

   46 CONT_VALOR: CONT_VALOR multi . CONT_VALOR

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 85
    VALOR       ir al estado 41


Estado 65

   47 CONT_VALOR: CONT_VALOR division . CONT_VALOR

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 86
    VALOR       ir al estado 41


Estado 66

   48 CONT_VALOR: CONT_VALOR potencia . CONT_VALOR

    identificador  desplazar e ir al estado 32
    entero         desplazar e ir al estado 33
    decimal        desplazar e ir al estado 34
    caracter       desplazar e ir al estado 35
    booleano       desplazar e ir al estado 36
    cadena         desplazar e ir al estado 37
    pari           desplazar e ir al estado 38
    menos          desplazar e ir al estado 39

    CONT_VALOR  ir al estado 87
    VALOR       ir al estado 41


Estado 67
